crates/rattler/src/install/snapshots/rattler__install__link__test__replace_long_prefix_in_text_file.snap
---
source: crates/rattler/src/install/link.rs
expression: replaced
---
#!/usr/bin/env python -m 123123

# just a comment

import sys
import re

main(...)
