crates/rattler/src/install/snapshots/rattler__install__link__test__replace_long_prefix_in_text_file_offsets.snap
---
source: crates/rattler/src/install/link.rs
assertion_line: 1427
expression: replaced
---
#!/usr/bin/env executable -m 123123

# just a comment

import sys
import re

main(...)

