crates/rattler/src/install/snapshots/rattler__install__link__test__replace_python_shebang-2.snap
---
source: crates/rattler/src/install/link.rs
expression: replaced
---
#!/bin/sh
'''exec' "/new/prefix/with spaces/bin/python3.12" -x 123 "$0" "$@" #'''
