crates/rattler/src/install/snapshots/rattler__install__link__test__replace_python_shebang.snap
---
source: crates/rattler/src/install/link.rs
expression: replaced
---
#!/bin/sh
'''exec' "/new/prefix/with spaces/bin/python3.12" "$0" "$@" #'''
